--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -341,6 +341,11 @@ html { scroll-behavior: smooth; }
   }
   .hero-content p {
     font-size: 0.9rem;
+    width: 90%;
+  }
+  .color-happy, .color-healthy, .color-wealthy{
+    width: 90%;
+    font-size: 20px;
   }
   .image-health-container {
     width: 200px;
@@ -350,14 +355,19 @@ html { scroll-behavior: smooth; }
   .container-1 img {
     width: 200px;
     height: auto;
+    margin: 0 auto;
+  }
+  .color h2{
+    font-size: 18px;
+    width: 90%;
   }
   .health-heading span {
     font-size: 24px;
     line-height: 1.8rem;
-    margin: 0 0 0 140px;
+    margin: 0 0 0 120px;
     padding: 10px 15px;
   }
   .hero{
-    margin: 5px 0;
+    margin: 5px auto;
   }
 }
