--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -85,7 +85,7 @@
 .wealthy-image-col img {
   width: 100%;
   max-width: 360px;
-  border-radius: 25px;
+  border-radius: 25% 0;
   object-fit: cover;
 }
 
