--- a/src/components/family/Family.css
+++ b/src/components/family/Family.css
@@ -61,7 +61,7 @@ body { color: #222; background: #fff; line-height: 1.5; overflow-x: hidden; padd
 /* ======================================================= */
 .step-img {  display: flex; justify-content: center; align-items: center; }
 
-.step-img img { width: 350px; height: 300px; border-radius: 12px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12); object-fit: fill; transition: transform 0.4s ease; cursor: pointer; }
+.step-img img { width: 350px; height: 300px; border-radius: 25% 0; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12); object-fit: fill; transition: transform 0.4s ease; cursor: pointer; }
 
 .step-img img:hover { transform: scale(1.05); }
 
