--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -19,21 +19,23 @@
 }
 
 .entrepreneur-container .entre-title {
-  font-size: 2.8rem;
-  color: rebeccapurple;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 32px;
+  color: white;
+  font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
+  background-color: #047871;
+  border-radius: 15px;
 }
 
 .entrepreneur-container .ent-title img {
   width: 120%;
   height: 500px;
-  border-radius: 30px; 
+  border-radius: 25% 0; 
   border: 3px solid green;
   object-fit: fill;
   margin: 0 auto;
   display: block;
-
+  
 }
 
 .entrepreneur-container .ent-title img:hover {
@@ -84,7 +86,7 @@
 .entrepreneur-container .ent-right img {
   width: 400px;
   height: 400px;
-  border-radius: 20px;
+  border-radius: 25% 0;
   object-fit: fill;
   transition: transform 0.3s ease;
 }
