--- a/src/components/income/Income.css
+++ b/src/components/income/Income.css
@@ -14,11 +14,13 @@ body {
 .income-header {
   text-align: center;
   padding: 15px;
-  color: forestgreen;
+  color: white;
+  background-color: #047871;
+  border-radius: 20px;
+  font-size: 20px;
 }
 
 .income-header h1 {
-  font-size: 2.5rem;
   font-weight: 700;
 }
 
@@ -68,7 +70,7 @@ body {
 .responsive-income-img {
   width: 300px;
   height: 400px;
-  border-radius: 15px;
+  border-radius: 25% 0;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 }
