--- a/src/components/womenempowerment/Womenempowerment.css
+++ b/src/components/womenempowerment/Womenempowerment.css
@@ -26,12 +26,12 @@
 
 .women-header-1 {
   text-align: center;
-  font-size: clamp(2rem, 4vw, 3rem);
-  color: #800000;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 32px;
+  color: white;
+  background-color: #047871;
+  font-family: 'Poppins', sans-serif;
   border-radius: 20px;
   padding: 15px;
-  background: #fff;
   box-shadow: 0 2px 10px rgba(0,0,0,0.05);
 }
 
@@ -58,7 +58,7 @@
   width: 60%;
   max-width: 400px;
   height: 400px;
-  border-radius: 12px;
+  border-radius: 25% 0;
   object-fit: fill;
 }
 
@@ -134,7 +134,7 @@
   height: auto;
   aspect-ratio: 3 / 4;
   object-fit: fill;
-  border-radius: 20px;
+  border-radius: 25% 0;
   transition: transform 0.3s ease;
 }
 
@@ -204,7 +204,7 @@
   width: 100%;
   height: 350px;
   aspect-ratio: 4 / 3;
-  border-radius: 8px;
+  border-radius: 25% 0;
   margin-top: 10px;
   object-fit: fill;
 }
