--- a/src/components/elder/Elder.css
+++ b/src/components/elder/Elder.css
@@ -22,17 +22,19 @@
 /* ---------- HEADER ---------- */
 .dm-eldr-header {
   text-align: center;
-  padding: 20px;
+  padding: 10px;
   margin: 40px;
-  color: forestgreen;
+  color: white;
   font-weight: bold;
   letter-spacing: 1px;
+  background-color: #047871;
+  border-radius: 20px;
+  font-size: 24px;
 }
 
 .dm-eldr-header h1 {
-  font-size: 2.5rem;
   margin: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
 }
 
 /* ---------- CONTAINER ---------- */
