--- a/src/components/elder/Elder.css
+++ b/src/components/elder/Elder.css
@@ -22,14 +22,14 @@
 /* ---------- HEADER ---------- */
 .dm-eldr-header {
   text-align: center;
-  padding: 10px;
-  margin: 40px;
+  padding: 5px;
+  margin: 20px;
   color: white;
   font-weight: bold;
   letter-spacing: 1px;
   background-color: #047871;
   border-radius: 20px;
-  font-size: 24px;
+  font-size: 20px;
 }
 
 .dm-eldr-header h1 {
@@ -65,7 +65,7 @@
   position: relative;
   flex: 1;
   max-width: 380px;
-  border-radius: 20px;
+  border-radius: 25% 0;
   overflow: hidden;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
   transition: transform 0.4s ease, box-shadow 0.4s ease;
