--- a/src/components/students/Students.css
+++ b/src/components/students/Students.css
@@ -8,8 +8,6 @@
   --stu-page-text: #0f172a;
   --stu-page-bg: #ffffff;
   --stu-page-accent: #16a34a; /* Vibrant green */
-  
-  font-family: "Inter", Arial, sans-serif;
   background: var(--stu-page-bg);
   color: var(--stu-page-text);
   line-height: 1.6;
@@ -18,12 +16,13 @@
 /* ---------- Header ---------- */
 .stu-page-header {
   text-align: center;
-  padding: 20px;
-  color: darkgreen;
+  padding: 5px;
+  color: white;
   margin: 30px 40px;
   border-radius: 12px;
   font-weight: bold;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  background-color: #047871;
 }
 
 .stu-page-header h1 {
@@ -69,7 +68,7 @@
 .stu-page-image-box img {
   width: 320px;
   height: 520px;
-  border-radius: 20px;
+  border-radius: 15% 0;
   cursor: pointer;
 }
 
