--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -38,12 +38,12 @@
 }
 
 .wealthy-hero-card img {
-  width: 90%;
-  height: 500px;
+  width: 100%;
+  height: 560px;
   display: block;
   object-fit: fill;
   border-radius: 25% 0;
-  margin: 20px auto;
+  margin: 0 auto;
 }
 
 /* Zigzag section compact */
@@ -54,7 +54,6 @@
   gap: 60px;
   /* reduced from 3rem */
   padding: 100px 0 0;
-  margin: 30px 0;
   /* reduced from 7rem */
 }
 
@@ -63,9 +62,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  gap: 2rem;
-  padding: 40px;
+  padding: 30px;
   border-radius: 40px;
+  margin: 40px 0 ;
+  background-color: grey;
 }
 
 .wealthy-row.wealthy-reverse .wealthy-image-col {
@@ -91,8 +91,6 @@
 
 /* Text column reduced padding */
 .wealthy-text-col {
-  padding: 20px;
-  border-radius: var(--radius);
   transition: all 0.3s ease;
   text-align: justify;
 }
@@ -106,7 +104,6 @@
   margin-bottom: 0.6rem;
   text-align: start;
   color: white;
-  background-color: green;
   border-radius: 25px;
   padding: 30px;
 }
