--- a/src/components/elder/Elder.css
+++ b/src/components/elder/Elder.css
@@ -22,17 +22,19 @@
 /* ---------- HEADER ---------- */
 .dm-eldr-header {
   text-align: center;
-  padding: 20px;
-  margin: 40px;
-  color: forestgreen;
+  padding: 5px;
+  margin: 20px;
+  color: white;
   font-weight: bold;
   letter-spacing: 1px;
+  background-color: #047871;
+  border-radius: 20px;
+  font-size: 20px;
 }
 
 .dm-eldr-header h1 {
-  font-size: 2.5rem;
   margin: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
 }
 
 /* ---------- CONTAINER ---------- */
@@ -63,7 +65,7 @@
   position: relative;
   flex: 1;
   max-width: 380px;
-  border-radius: 20px;
+  border-radius: 25% 0;
   overflow: hidden;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
   transition: transform 0.4s ease, box-shadow 0.4s ease;
