--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -19,21 +19,23 @@
 }
 
 .entrepreneur-container .entre-title {
-  font-size: 2.8rem;
-  color: rebeccapurple;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 32px;
+  color: white;
+  font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
+  background-color: #047871;
+  border-radius: 15px;
 }
 
 .entrepreneur-container .ent-title img {
   width: 120%;
   height: 500px;
-  border-radius: 30px; 
+  border-radius: 25% 0; 
   border: 3px solid green;
   object-fit: fill;
   margin: 0 auto;
   display: block;
-
+  
 }
 
 .entrepreneur-container .ent-title img:hover {
@@ -47,44 +49,45 @@
 .ent-left {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 50px;
-  padding:40px;
+  justify-content: space-around;
+  padding: 40px;
+  gap: 30px;
   color: #ffffffe0;
-  background-image: linear-gradient(to right, #2868a9, #648585);
+  background-color: #047871;
   border-radius: 25px;
   margin: 200px 0 50px;
 }
 
 .ent-left * {
   color: #ffffffe0;
-  font-size: 25px;
-  text-align: start;
+  font-size: 30px;
+  text-align: left;
+
 }
 
 .ent-right {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 50px;
+  justify-content: space-around;
   margin: 200px 0 50px;
   padding: 40px;
+  gap: 30px;
   color: #ffffffe0;
-  background-image: linear-gradient(to left, #cedb1c, #79d8d8);
+  background-color: #047871;
   border-radius: 25px;
 }
 
 .ent-right * {
-  color: black;
-  font-size: 25px;
-  text-align: start;
+  color: #ffffffe0;
+  font-size: 30px;
+  text-align: left;
 }
 
 .entrepreneur-container .ent-left img,
 .entrepreneur-container .ent-right img {
   width: 400px;
   height: 400px;
-  border-radius: 20px;
+  border-radius: 25% 0;
   object-fit: fill;
   transition: transform 0.3s ease;
 }
@@ -147,7 +150,6 @@
     align-items: center;
     text-align: center;
     margin: 60px auto;
-    gap: 30px;
     padding: 20px;
   }
 
@@ -157,7 +159,7 @@
     width:350px;
     height:300px;
     margin: 20px;
-    border-radius:30px;
+    border-radius: 25% 0;
   }
 
   .entrepreneur-container .ent-box-left,
@@ -198,7 +200,7 @@
   .entrepreneur-container .ent-right img {
     height:250px;
     margin:20px;
-    border-radius:30px;
+    border-radius: 25% 0;
     width:250px;
   }
 
