--- a/src/components/family/Family.css
+++ b/src/components/family/Family.css
@@ -62,7 +62,7 @@ body { color: #222; background: #fff; line-height: 1.5; overflow-x: hidden; padd
 /* ======================================================= */
 .step-img {  display: flex; justify-content: center; align-items: center; }
 
-.step-img img { width: 350px; height: 300px; border-radius: 12px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12); object-fit: fill; transition: transform 0.4s ease; cursor: pointer; }
+.step-img img { width: 350px; height: 300px; border-radius: 25% 0; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12); object-fit: fill; transition: transform 0.4s ease; cursor: pointer; }
 
 .step-img img:hover { transform: scale(1.05); }
 
@@ -71,7 +71,7 @@ body { color: #222; background: #fff; line-height: 1.5; overflow-x: hidden; padd
 /* ======================================================= */
 .step-content { flex: 1 1 50%; padding: 6px 10px; margin: 120px 0;}
 
-.step-content p { font-size: 20px; margin-bottom: 0.6rem; text-align: left; line-height: 1.6; }
+.step-content p { font-size: 28px; margin-bottom: 0.6rem; text-align: left; line-height: 1.6; }
 
 .step-content span { color: #d40000; font-weight: bold; }
 
