--- a/src/components/income/Income.css
+++ b/src/components/income/Income.css
@@ -14,11 +14,13 @@ body {
 .income-header {
   text-align: center;
   padding: 15px;
-  color: forestgreen;
+  color: white;
+  background-color: #047871;
+  border-radius: 20px;
+  font-size: 20px;
 }
 
 .income-header h1 {
-  font-size: 2.5rem;
   font-weight: 700;
 }
 
@@ -37,7 +39,7 @@ body {
 
 .income-text {
   flex: 1;
-  font-size: 23px !important;
+  font-size: 27px !important;
   text-align: start;
   padding: 20px;
   border-radius: 20px;
@@ -68,7 +70,7 @@ body {
 .responsive-income-img {
   width: 300px;
   height: 400px;
-  border-radius: 15px;
+  border-radius: 25% 0;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 }
@@ -231,28 +233,29 @@ body {
     color: navy;
     border-radius: 20px;
     padding: 20px;
+    font-size: 30px;
   }
   50% {
     background-color: transparent;
     color: blue;
     border-radius: 20px;
     padding: 20px;
+    font-size: 30px;
   }
   100% {
     background-color: yellow;
     color: darkblue;
     border-radius: 20px;
     padding: 20px;
+    font-size: 30px;
   }
 }
 /* Push the 4th section text further right */
 .income-section.move-right {
-  justify-content: flex-end; /* push the content section to the right side */
-  gap: 200px; /* increase space between image and text */
+  justify-content: flex-end; /* push the content section to the right side */ /* increase space between image and text */
 }
 
-.income-section.move-right .income-text {
-  margin-left: 250px; /* move text even more to right */
+.income-section.move-right .income-text { /* move text even more to right */
   max-width: 600px;
   text-align: left;
   transition: all 0.3s ease-in-out;
