--- a/src/components/family/Family.css
+++ b/src/components/family/Family.css
@@ -32,6 +32,7 @@ body { color: #222; background: #fff; line-height: 1.5; overflow-x: hidden; padd
   display: inline;
   border-radius: 20px;
   margin: 0 -50px;
+  padding-top: 20px;
 }
 
 .family-heading span {
