--- a/src/components/family/Family.css
+++ b/src/components/family/Family.css
@@ -152,10 +152,15 @@ footer .btn { margin: 0.6rem 0; }
   .step-content h3 { font-size: 1.2rem; }
   .highlight-text { font-size: 0.95rem; padding: 0 4px; }
   .btn { width: auto; font-size: 0.85rem; padding: 6px 12px; }
-  .family-heading { font-size: 24px;
-        line-height: 2.4rem;
-        margin: 0 40px;
-        padding: 10px 15px; }
+  .family-heading {
+        margin-left: 50px;
+        font-size: 18px;
+  }
+  .family-heading span{
+     padding: 0 8px;
+      font-size: 24px;
+      line-height: 1.8;
+  }
   .process{
     margin: 0 auto;
     padding: 0 10px;
