--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -162,7 +162,7 @@
 
   .wealthy-hero-card img {
     width: 100%;
-    border-radius: 25px;
+    border-radius: 25% 0;
     height: 300px;
   }
 
@@ -331,9 +331,9 @@
   }
 
   .wealth-heading span {
-    font-size: 18px;
+    font-size: 24px;
     padding: 0 8px;
-    margin: 0 0 0 60px;
+    margin: 0 0 0 80px;
   }
 
   .view-more-btn {
