--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -55,7 +55,7 @@
 
 .zigzag-image-container img {
   width: 420px;
-  height: auto;
+  height: 300px;
   border-radius: 25% 0;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease;
