--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -102,7 +102,9 @@
   }
 
   .zigzag-image-container img {
-    width: 90%;
+    width: 400px;
+    object-fit: fill;
+    height: 300px;
   }
 
   .zigzag-text-content {
