--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -34,7 +34,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 130px 0 50px;
-  background-image: linear-gradient(45deg, blue, red);
+  background-image: linear-gradient(45deg, blue, grey);
   border-radius: 25px;
   padding: 30px;
   gap: 40px;
@@ -54,11 +54,10 @@
 }
 
 .zigzag-image-container img {
-  width: 420px;
-  height: 300px;
+  width: 480px;
+  height: 350px;
   border-radius: 25% 0;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease;
+  box-shadow: 0 0 20px rgba(0, 255, 255, 0.3);
 }
 
 .zigzag-image-container img:hover {
