--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -34,7 +34,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 130px 0 50px;
-  background-image: linear-gradient(45deg, blue, grey);
+  background-image: linear-gradient(45deg, red, grey);
   border-radius: 25px;
   padding: 30px;
   gap: 40px;
@@ -43,7 +43,7 @@
 
 .zigzag-layout-section.reverse-layout {
   flex-direction: row-reverse;
-  background-image: linear-gradient(45deg, red, blue);
+  background-image: linear-gradient(45deg, red, grey);
 }
 
 /* ============================= */
