--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -270,7 +270,7 @@ html { scroll-behavior: smooth; }
   padding: 0 80px;
   line-height: 1.8;
 }
-.footer h2 { font-size: 1.5rem; line-height: 1.8; font-weight: 900; padding: 20px; margin-bottom: 13px; color: #cdefff }
+.footer h2 { font-size: 1.5rem; line-height: 1.8; font-weight: 900; padding: 20px; margin-bottom: 13px; color: #fff }
 
 .footer .english  { font-size: 1.8rem; font-weight: 900; margin-bottom: 13px; color: #ffffff; }
 .tamil-1{
