--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -91,9 +91,8 @@ body {
   padding: 0 40px;
   border-radius: 15px;
   margin-top: 30px;
-  margin-left: -50px;
-  font-weight: 600;
-  width: 105%;
+  margin-left: 60px;
+  font-weight: 600;;
   text-align:center;
 }
 
