--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -91,9 +91,8 @@ body {
   padding: 0 40px;
   border-radius: 15px;
   margin-top: 30px;
-  margin-left: -50px;
+  margin-left: 60px;
   font-weight: 600;
-  width: 105%;
   text-align:center;
 }
 
@@ -557,6 +556,14 @@ body {
   color: #b71c1c;
 }
 
+.vision{
+  background-color: #047871;
+  padding: 0 10px;
+  color: black;
+  font-size: 24px;
+  border-radius: 8px;
+}
+
 .solution-card-desc1 {
   color: #666;
   font-size: 1.08em;
@@ -756,7 +763,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 25px;
+  gap: 220px;
+  align-items: center;
 }
 
 .team-member-card {
@@ -767,12 +775,12 @@ body {
 }
 
 .team-member-card img {
-  width: 160px;
-  height: 160px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 20px;
-  border: 3px solid black;
+  border: 2.5px solid black;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
 }
 
