--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -83,7 +83,7 @@ body {
   margin-right: auto;
 }
 
-.dm {
+.dm{
   background: #047871;
   color: #fff;
   display: inline-block;
@@ -522,8 +522,9 @@ body {
   gap: 40px;
   justify-items: center;
   align-items: stretch;
-  margin-top: 50px;
+  margin-top: 5px;
   width: 100%;
+  margin-bottom: 60px;
 }
 
 .solution-card1 {
@@ -557,11 +558,31 @@ body {
 }
 
 .vision{
-  background-color: #047871;
-  padding: 0 10px;
-  color: black;
+  background: #047871;
+  color: #fff;
+  display: inline-block;
   font-size: 24px;
-  border-radius: 8px;
+  padding: 0 40px;
+  border-radius: 15px;
+  margin-top: 5px;
+  font-weight: 600;
+  text-align:center;
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.mission{
+   background: #047871;
+  color: #fff;
+  display: inline-block;
+  font-size: 24px;
+  padding: 0 40px;
+  border-radius: 15px;
+  margin-top: 5px;
+  font-weight: 600;
+  text-align:center;
+  width: 100%;
+  margin-bottom: 0;
 }
 
 .solution-card-desc1 {
@@ -572,7 +593,7 @@ body {
 
 .solution-card-img1 {
   width: 100%;
-  height: 550px;
+  height: 540px;
   border-top: 1px solid #e0e0e0;
   transition: transform 0.3s ease;
   border-radius: 20px;
@@ -595,7 +616,7 @@ body {
   display: flex;
   gap: 50px;
   align-items: stretch;
-  margin-top: 80px;
+  margin-top: 5px;
 }
 
 .ar-vr-image-column {
