--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -557,25 +557,11 @@ body {
   color: #b71c1c;
 }
 
-.vision{
+.vision, .mission{
   background: #047871;
   color: #fff;
   display: inline-block;
-  font-size: 24px;
-  padding: 0 40px;
-  border-radius: 15px;
-  margin-top: 5px;
-  font-weight: 600;
-  text-align:center;
-  width: 100%;
-  margin-bottom: 0;
-}
-
-.mission{
-   background: #047871;
-  color: #fff;
-  display: inline-block;
-  font-size: 24px;
+  font-size: 28px;
   padding: 0 40px;
   border-radius: 15px;
   margin-top: 5px;
@@ -616,7 +602,7 @@ body {
   display: flex;
   gap: 50px;
   align-items: stretch;
-  margin-top: 5px;
+  margin-top: 40px;
 }
 
 .ar-vr-image-column {
