--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -569,7 +569,12 @@ body {
   text-align:center;
   margin-left: 520px;
 }
-
+@media screen and (max-width: 768px){
+  .vision, .mission{
+    width: 70%;
+    margin-left: 75px;
+  }
+}
 @media screen and (max-width: 480px){
   .vision, .mission{
     width: 90%;
