--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,18 +14,14 @@
   z-index: 100;
 }
 
-
 .nav-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 72px;
   padding: 0 -100px; /* increased gap inside navbar */
-  background-color: #fff; /* optional */
+  background-color: #817676 !important;/* optional */
 }
-
-
-
 
 /* Logo */
 .logo img {
