--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -13,12 +13,14 @@
 }
 
 .entrepreneur-container .ent-section {
-  margin: 40px auto;
+  margin: 20px auto;
   text-align: center;
-  border-radius: 20px; 
+  padding: 15px;
+  color: white;
+  border-radius: 20px;
+  font-size: 20px; 
 }
-
-.entrepreneur-container .entre-title {
+.entre-title {
   font-size: 32px;
   color: white;
   font-family: "Poppins", sans-serif;
@@ -27,7 +29,7 @@
   border-radius: 15px;
 }
 
-.entrepreneur-container .ent-title img {
+.ent-title img {
   width: 120%;
   height: 500px;
   border-radius: 25px; 
@@ -83,8 +85,8 @@
   text-align: left;
 }
 
-.entrepreneur-container .ent-left img,
-.entrepreneur-container .ent-right img {
+.ent-left img,
+.ent-right img {
   width: 400px;
   height: 400px;
   border-radius: 25% 0;
@@ -97,8 +99,8 @@
   transform: translateY(-8px);
 }
 
-.entrepreneur-container .ent-box-left,
-.entrepreneur-container .ent-box-right {
+ .ent-box-left,
+.ent-box-right {
   font-size: 22px;
   line-height: 2.8rem;
   font-weight: 600;
@@ -136,7 +138,6 @@
 
 .view-more:hover {
   transform: translateY(-2px);
-  background-color: #085a82;
 }
 
 /* ======================== */
@@ -246,17 +247,3 @@
   }
 }
 
-@keyframes highlight {
-  0% {
-    background-color: yellow;
-    color: navy;
-  }
-  50% {
-    background-color: transparent;
-    color: blue;
-  }
-  100% {
-    background-color: yellow;
-    color: darkblue;
-  }
-}
