--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -34,7 +34,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 130px 0 50px;
-  background-image: linear-gradient(45deg, red, grey);
+  background-image: linear-gradient(45deg, grey, red);
   border-radius: 25px;
   padding: 30px;
   gap: 40px;
