--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -11,6 +11,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* WORD */
+.word{
+  padding-left: 30px;
+}
 
 .entrepreneur-container .ent-section {
   margin: 20px auto;
